# GK1

./: .gitignore  README.md
00_week/: sfml-app
01_week/include/: canvas.h  font.h  menu.h
01_week/src/: Makefile  canvas.cpp  main.cpp  menu.cpp
02_week/: CMakeLists.txt
04_week/: ChartClass.cpp  ChartClass.h  GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  matrix.cpp  out  vecmat.h  vector.cpp
05_week/src/: GUIMyFrame1.cpp  GUIMyFrame1.h  Makefile  vecmat.h
